- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.3.1
 
- 
        2d92e8d184 (qt/qtdeclarative/6.4) 41ebc90a0f (qt/qtdeclarative/dev) 2d92e8d184 (qt/tqtc-qtdeclarative/6.4) 41ebc90a0f (qt/tqtc-qtdeclarative/dev)
 
qmltc generates a lot of code like:
Q_ASSERT(dynamic_cast<QQmlParserStatus *>(this) != nullptr); 
this causes gcc's `-Waddress` to fire with something like:
warning: the address of 'QQuickItem::<anonymous>' will never be NULL [-Waddress] 
| For Gerrit Dashboard: QTBUG-104468 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 424326,2 | qmltc: Convert dynamic_cast check to static assert for QML interfaces | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 424339,2 | qmltc: Convert dynamic_cast check to static assert for QML interfaces | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |