qmltc: Convert dynamic_cast check to static assert for QML interfaces

Fixes: QTBUG-104468
Change-Id: I51d869d43f24e8568f23c9b191331cf02b3c1600
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 41ebc90a0f80c2ffe20187a752e787ea84ad7d5c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>